--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test:coverage": "ng test --code-coverage",
+    "test:coverage": "ng test --code-coverage --watch=false",
+    "test:watch": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
