--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PhotoApp",
+  "name": "photo-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -11,7 +11,8 @@
     "test:coverage": "ng test --code-coverage --watch=false",
     "test:watch": "ng test --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2e:watch": "ng e2e --watch"
   },
   "private": true,
   "dependencies": {
@@ -43,11 +44,14 @@
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "3.4.3",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@nrwl/cypress": "^13.8.8",
+    "@nrwl/workspace": "^13.8.8",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cypress": "^9.5.1",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -60,7 +64,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
